[package]
authors = ["Naoki Fujita <fujitanaoki0718@gmail.com>"]
description = "learn winapi and building software for specific os(windows)"
edition = "2018"
name = "ex4_winapi"
version = "0.1.0"

[dependencies]
kernel32-sys = "0.2.2"
winapi = {version = "0.3.9", features = ["winuser", "sysinfoapi"]}
