[package]
name = "error_handling"
version = "0.1.0"
authors = ["Naoki Fujita <fujitanaoki0718@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [profile.release] # リリースモード時の設定
# panic = 'abort' # panic時にスタックの巻き戻しをせずに終了する

[dependencies]
